# Iris-segmentation-occlusion-detection

./: CMakeLists.txt  Doxyfile  IrisSegm.hpp  OcclusionDetector.cpp  Preprocessing.hpp  README.md  eye_localization.cpp  eye_localization.h  init.txt  iris_localization.cpp  iris_localization.h  main.cpp  main.h  multi_integro_diff.cpp  multi_integro_diff.h  occlusion_reflection_detec.cpp  occlusion_reflection_detec.h  polynomial_regression.cpp  polynomial_regression.h  reflection_correction.h  test.cpp  test.h
IrisEncoding/: LBP.cpp  LBP.hpp  Makefile  Matcher.cpp  Matcher.hpp  Subject.cpp  Subject.hpp  hist.cpp  hist.hpp  irisEncoder  recognitionMain.cpp  recognitionMain.hpp  utils.cpp  utils.hpp
IrisEvaluation/: evaluation.py
IrisSegmentation/: Eye.cpp  IrisSegm.cpp  Makefile  Segmentation.cpp  irisSegm  utils.cpp  utils.hpp
IrisSegmentation/PreviousVersion/: eye_localization.cpp  main.cpp  main.h  normalization.h  polynomial_regression.cpp  preprocessing.cpp  reflection_correction.cpp
PreviousVersion/: eye_localization.h  iris_localization.h  main.cpp  normalization.cpp  preprocessing.h
ReplacementVersion/: Eye.cpp  Eye.hpp  IrisSegm.cpp  IrisSegm.hpp  Normalization.cpp  Normalization.hpp  OcclusionDetector.cpp  OcclusionDetector.hpp  Preprocessing.cpp  Preprocessing.hpp  Segmentation.cpp  Segmentation.hpp  a.out  main.cpp  utils.cpp  utils.hpp
